# Osi

./: CMakeLists.txt
cmake/: FindMosek.cmake
